--- a/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/MainWindow.xaml
+++ b/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/MainWindow.xaml
@@ -12,10 +12,10 @@
     <Grid>
         <Label Content="Korisnicko Ime" HorizontalAlignment="Left" Margin="50,84,0,0" VerticalAlignment="Top" Width="125" FontSize="18"/>
         <Label Content="Sifra" HorizontalAlignment="Left" Margin="50,127,0,0" VerticalAlignment="Top" Width="125" FontSize="18"/>
-        <TextBox HorizontalAlignment="Left" Height="34" Margin="180,84,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="18"/>
-        <PasswordBox HorizontalAlignment="Left" Margin="180,127,0,0" VerticalAlignment="Top" Width="160" Height="34"/>
-        <Button Content="Potvrdi" HorizontalAlignment="Left" Margin="180,180,0,0" VerticalAlignment="Top" Width="75" Height="34"/>
-        <Button Content="Otkazi" HorizontalAlignment="Left" Margin="265,180,0,0" VerticalAlignment="Top" Width="75" Height="34"/>
+        <TextBox  Name="tbKorisnickoIme" HorizontalAlignment="Left" Height="34" Margin="180,84,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="18"/>
+        <PasswordBox  Name="pbSifra" HorizontalAlignment="Left" Margin="180,127,0,0" VerticalAlignment="Top" Width="160" Height="34"/>
+        <Button x:Name="btPrijava" Content="Potvrdi" HorizontalAlignment="Left" Margin="180,180,0,0" VerticalAlignment="Top" Width="75" Height="34" Click="Prijava"/>
+        <Button x:Name="btIzadji" Content="Otkazi" HorizontalAlignment="Left" Margin="265,180,0,0" VerticalAlignment="Top" Width="75" Height="34" Click="Izadji"/>
 
     </Grid>
 </Window>
