--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/KorisniciDodavanjeIzmena.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/KorisniciDodavanjeIzmena.xaml
@@ -12,7 +12,7 @@
         <Label Content="Prezime:" HorizontalAlignment="Left" Height="30" Margin="80,70,0,0" VerticalAlignment="Top" Width="84"  RenderTransformOrigin="0.476,0.7"/>
         <TextBox x:Name="tbPrezime" VerticalContentAlignment="Center" Text="{Binding Path=Prezime}" HorizontalAlignment="Left" Height="27" Margin="183,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
         <Label Content="Korisnicko ime:" HorizontalAlignment="Left" Height="30" Margin="80,110,0,0" VerticalAlignment="Top" Width="127"  RenderTransformOrigin="0.488,0.667"/>
-        <TextBox x:Name="tbKorisnickoIme" VerticalContentAlignment="Center" Text="{Binding Path=Korisnicko_Ime}" HorizontalAlignment="Left" Height="27" Margin="183,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="tbKorisnickoIme" VerticalContentAlignment="Center" Text="{Binding Path=KorisnickoIme}" HorizontalAlignment="Left" Height="27" Margin="183,110,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
         <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="33" Margin="100,230,0,0" VerticalAlignment="Top" Width="90" IsCancel="True" Click="Potvrdi"/>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Height="33" Margin="230,230,0,0" VerticalAlignment="Top" Width="90" IsCancel="True"/>
         <Label Content="Lozinka:"   HorizontalAlignment="Left" Height="29" Margin="80,150,0,0" VerticalAlignment="Top" Width="99" />
