--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/IzlistajStavke.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/IzlistajStavke.xaml
@@ -5,10 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POP_SF_53_2016_GUI.UI"
         mc:Ignorable="d"
-        Title="IzlistajStavke" Height="335" Width="625" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#4169E1">
+        Title="IzlistajStavke" Height="405" Width="435" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#4169E1">
     <Grid>
-        <DataGrid x:Name="dgIspisStavki" ColumnWidth="*" CanUserAddRows="False" CanUserResizeColumns="False" HorizontalAlignment="Left" Height="193" VerticalAlignment="Top" Width="621" AutoGeneratingColumn="dgIspisStavki_AutoGeneratingColumn"/>
-        <Button x:Name="btnIzadji" Content="Izadji" HorizontalAlignment="Left" Height="41" Margin="220,245,0,0" VerticalAlignment="Top" Width="154" Click="Izlaz"/>
-
+        <Button x:Name="btnIzadji" Content="Izadji" HorizontalAlignment="Left" Height="41" Margin="139,321,0,0" VerticalAlignment="Top" Width="154" Click="Izlaz"/>
+        <TextBlock x:Name="tbIspis" HorizontalAlignment="Left" Height="316" TextWrapping="Wrap" VerticalAlignment="Top" Width="431" Background="White"/>
     </Grid>
 </Window>
